--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# H2 bank connection data
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
 
+# H2 bank web client configuration
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Setting to show SQL on console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
